# codesize

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
examples/: print_large_files.py
src/codesize/: files.py  print_large_files.py
